Announce API as workaround for live region bugs in MacOS <= 10.13 (pre-Mojave)

In some versions of MacOS, live regions don't work consistently, due to a bug
in those versions of VoiceOver. Due to these bugs, use the announce API when
running on an older version of MacOS.

Bug: 884801,875843
Change-Id: Ia9711cf935ba605785dfb3cfaf32f85bd2c8cf13
Reviewed-on: https://chromium-review.googlesource.com/1228635
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595193}
Former-commit-id: f0f6d1aecbe7ea8e6dfbedd8656beaafab86072b